V1 Android: keep provider registry compatible with Android API 26